# chloroscan

./: .gitignore  CONTRIBUTING.rst  ChloroScan.sh  MMA  README.md  README.rst  Snakefile  autoInit.sh  chloroscan-crunch-run-debug.sh  install_fraggenescanrs.sh  mkdocs.sh  pyproject.toml  supermatrix.cds.fa.treefile  test_data_timestamps.txt
.github/workflows/: docs.yml  publish.yml  testing.yml
.snakemake/metadata/: b3V0cHV0L3dvcmtpbmcvY29yZ2k=  b3V0cHV0L3dvcmtpbmcvY29yZ2kvcGxhc3RpZC5mYXN0YQ==  b3V0cHV0L3dvcmtpbmcvYmlubnk=  b3V0cHV0Mi93b3JraW5nL0NBVA==  (+5 more)
binny_Chloroscan/: Snakefile  binny
binny_algal_database/: taxon_marker_sets_lineage_sorted.tsv
chloroscan/: __about__.py  snk.yaml
conda/: corgi_env.yaml
config/: ChloroScan.init.yaml  ChloroScan.snk.yaml  config.default.yaml  config.template.yaml  config.zero.yaml
docs/source/: conf.py  (+1 more)
envs/: CAT_env.yml  corgi_env.yml  documenting_binny.yml  refinement.yml  summary.yml
gh-pages/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
rules/: binning_binny.smk  corgi.smk  taxonomy_CAT.smk
scripts/: FragGeneScanRs.sh  cds-extraction.sh  corgi-fasta_filter.py  corgi-gather_accession.sh  create_taxonomy_profile.py  create_yaml.sh  gffread.sh  plastid_contigs_util.py  refine_bins.py  summarize_binny_results.py  visualization.py
test_data/: contig_depth_test.txt
tests/: conftest.py  test_1_corgi.py  test_2_binny.py  test_4_refinement.py  test_binny.py  test_cat.py  test_cds.py  test_cli.py  test_corgi.py  test_krona.py  test_refinement.py  test_summary.py  test_visualizing.py
(+168 files in other folders)
