[tool.poetry]
name = "chloroscan"
version = "0.1.0"
description = "A computational workflow designed to recover plastid genomes from metagenomes."
authors = ["Andy Tong, Robert Turnbull for acknowledgement"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
snk = "^0.24.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
Sphinx = "^4.4.0"
sphinx-rtd-theme = "^1.0.0"
sphinx-autobuild = "^2021.3.14"
sphinx-copybutton = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
